--- a/_posts/2016-06-19-webp-fix.markdown
+++ b/_posts/2016-06-19-webp-fix.markdown
@@ -13,6 +13,8 @@ tags:
   - WebP
 ---
 
+> 原创文章，首发自简书。[前往查看](https://www.jianshu.com/p/e5837a85e6cb)
+
 # 0x00 背景
 
 作为移动领域所力推的图片格式，`WebP`图片在商业领域证明了其应有的价值。基于其他格式的横向对比，其在压缩性能表现，及还原度极为优秀，节省大量的带宽开销。基于可观的效益比，团队早前已开始磋商将当前图片资源迁移至.webp资源。
