--- a/_posts/2018-12-16-git.markdown
+++ b/_posts/2018-12-16-git.markdown
@@ -12,7 +12,9 @@ tags:
   - 思考
 ---
 
-> git 是世界上最先进的分布式版本控制系统，没有之一。
+> 原创文章，首发自简书。[前往查看](https://www.jianshu.com/p/8821e9846773)
+
+git 是世界上最先进的分布式版本控制系统，没有之一。
 
 # 前言
 本文简要阐述了 git 的诞生历程，以及其作者 Linus Torvalds（林纳斯·托瓦兹，同时也是 Linux 之父）对 git 的思考。对开发者而言，了解 git 产生的背景和设计理念，有助于更好地理解和使用 git；对管理者而言，则能更好地对企业项目开展有效的管理。
