--- a/_posts/2018-12-16-git.markdown
+++ b/_posts/2018-12-16-git.markdown
@@ -19,11 +19,7 @@ git 是世界上最先进的分布式版本控制系统，没有之一。
 # 前言
 本文简要阐述了 git 的诞生历程，以及其作者 Linus Torvalds（林纳斯·托瓦兹，同时也是 Linux 之父）对 git 的思考。对开发者而言，了解 git 产生的背景和设计理念，有助于更好地理解和使用 git；对管理者而言，则能更好地对企业项目开展有效的管理。
 
-> 本文授权并同步首发于欢聚时代旗下技术公众号：YYGeeker。更多干货，欢迎订阅。
-> 未经许可，严禁转载。
-> 本文阅读用时：8 分钟。
-
-> 欢聚时代（YY）及虎牙（HUYA）面试内推请移步文末。
+> 本文授权并同步首发于欢聚时代（YY）旗下技术公众号：YYGeeker。更多干货，欢迎订阅。
 
 # 年轻时的 Linus Torvalds
 
